To merge AIP FTPA changes to master (#869)
* RIA-6112 FTPA submitted (AIP) notification (#802)

* RIA-6112 Add template reference and citizen event privilege

* RIA-6112 Add personalization class, handler bean, generator bean

* RIA-6112 Functional test

* RIA-6112 Tweak notification to standardize it (#816)

* RIA-6133 Enable existing notifications for AO and HO (AIP FTPA submitted) (#803)

* RIA-6133 Enable existing notifications for AO and HO when citizen submits FTPA

* RIA-6133 Add other notifications to functional test

* RIA-6115 FTPA submitted by HO (AIP journey) (#813)

* RIA-6133 Enable existing notifications for AO and HO when citizen submits FTPA

* RIA-6115 Notification for appellant in person when HO submits FTPA

* RIA-6115 Tests for notification for aip when HO submits FTPA

* RIA-6115 CVE suppression

* RIA-6115 Update dockerfile

* RIA-6115 Add listing reference line

* RIA-6115 Add sms notification

* Ria 7024 appellant ftpa submitted sms (#820)

* RIA-6115 CVE suppression

* RIA-6115 Update dockerfile

* RIA-6115 Add listing reference line

* RIA-7024 Sms notification for appellant when appellant submits FTPA

* Ria 6116 respondent ftpa granded partially granted (#814)

* RIA-6116 Notification to aip for respondent FTPA decision granted/partially granted

* RIA-6116 Diversify between AIP and non AIP notifications

* RIA-6116 Unit test

* RIA-6116 Feature tests for LeadershipJudgeFtpaDecision

* RIA-6116 Feature tests for ResidentJudgeFtpaDecision

* RIA-6116 Add subscribers to functional test scenarios

* RIA-6116 Add sms notification

* RIA-6116 Add sms to functional tests

* RIA-6116 Suppressions

* Ria 6135 ho ftpa decision refused not admitted (#822)

* RIA-6135 Refactor template reference to standardize with pre-existing ones

* RIA-6135 Add notifications for refused and not admitted ftpa decisions

* RIA-6135 Functional tests

* Ria 6113 appellant ftpa decision notificati